bug with text overflow

--- a/src/components/Todo.scss
+++ b/src/components/Todo.scss
@@ -8,6 +8,10 @@
     width: 100%;
   }
 
+  &__wrapper {
+    display: flex;
+  }
+
   &__list {
     &-item {
       display: flex;
@@ -21,6 +25,10 @@
       font-weight: 400;
       font-size: 16px;
       background: #21192b;
+      &_text {
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
     }
 
     &-done {
